StringUtils.isBlank
Increase Java 8 compatibility